@@ -27,6 +27,7 @@
 - expire individual submounts.
 - add ino_index locking.
 - fix nested submount expiring away when pwd is base of submount.
+- more expire re-work to cope better with shutdown following cthon tests.
 
 13/7/2006 autofs-5.0.1 rc1
 --------------------------
